AM_CXXFLAGS = -I. -I../ -I ../kgmod @XML2HEAD@


## Define a libtool archive target "libexample-@EXAMPLE_API_VERSION@.la", with
## @EXAMPLE_API_VERSION@ substituted into the generated Makefile at configure
## time.
## The libtool archive file (.la) will be installed into the directory named
## by the predefined variable $(bindir), along with the actual shared library
## file (.so).
lib_LTLIBRARIES = libmcmd@MOD_MAJOR_VERSION@.la

## Instruct libtool to include ABI version information in the generated shared
## library file (.so).  The library ABI version is defined in configure.ac, so
## that all version information is kept in one place.
libmcmd@MOD_MAJOR_VERSION@_la_LDFLAGS = -version-info $(MOD_SO_VERSION) -single_module @XML2LIB@

libmcmd@MOD_MAJOR_VERSION@_la_LIBADD = $(top_srcdir)/src/kgmod/libkgmod@MOD_MAJOR_VERSION@.la

libmcmd@MOD_MAJOR_VERSION@_la_SOURCES = \
kgaccum.cpp \
kgarff2csv.cpp \
kgavg.cpp \
kgbest.cpp \
kgbucket.cpp \
kgcal.cpp \
kgcat.cpp \
kgchgnum.cpp \
kgchgstr.cpp \
kgchkcsv.cpp \
kgcombi.cpp \
kgcommon.cpp \
kgcount.cpp \
kgcross.cpp \
kg2cross.cpp \
kgcsv2arff.cpp \
kgcsv2json.cpp \
kgcsvconv.cpp \
kgcut.cpp \
kgdata.cpp \
kgdformat.cpp \
kgdelnull.cpp \
kgdsp.cpp \
kgduprec.cpp \
kgfldname.cpp \
kgfsort.cpp \
kghashavg.cpp \
kghashsum.cpp \
kginput.cpp \
kgjoin.cpp \
kgkeybreak.cpp \
kgmbucket.cpp \
kgmseldsp.cpp \
kgmvavg.cpp \
kgmvsim.cpp \
kgmvstats.cpp \
kgnewnumber.cpp \
kgnewrand.cpp \
kgnewstr.cpp \
kgnjoin.cpp \
kgnormalize.cpp \
kgnrcommon.cpp \
kgnrjoin.cpp \
kgnullto.cpp \
kgnumber.cpp \
kgpadding.cpp \
kgpaste.cpp \
kgproduct.cpp \
kgrand.cpp \
kgrjoin.cpp \
kgminput.cpp \
kgsed.cpp \
kgsel.cpp \
kgseldsp.cpp \
kgselrand.cpp \
kgselstr.cpp \
kgselnum.cpp \
kgsep.cpp \
kgsep2.cpp \
kgsetstr.cpp \
kgshare.cpp \
kgshuffle.cpp \
kgsim.cpp \
kgslide.cpp \
kgsplit.cpp \
kgstats.cpp \
kgsum.cpp \
kgsummary.cpp \
kgtab2csv.cpp \
kgtee.cpp \
kgtonull.cpp \
kgtra.cpp \
kgtrafld.cpp \
kgtraflg.cpp \
kguniq.cpp \
kgvcat.cpp \
kgvcommon.cpp \
kgvcount.cpp \
kgvdelim.cpp \
kgvjoin.cpp \
kgvnullto.cpp \
kgvdelnull.cpp \
kgvreplace.cpp \
kgvsort.cpp \
kgvuniq.cpp \
kgwindow.cpp \
kgxml2csv.cpp \
kgaccum.h \
kgarff2csv.h \
kgavg.h \
kgbest.h \
kgbucket.h \
kgcal.h \
kgcat.h \
kgchgnum.h \
kgchgstr.h \
kgchkcsv.h \
kgcombi.h \
kgcommon.h \
kgcount.h \
kgcross.h \
kg2cross.h \
kgcsv2arff.h \
kgcsv2json.h \
kgcsvconv.h \
kgcut.h \
kgdformat.h \
kgdelnull.h \
kgdsp.h \
kgduprec.h \
kgdata.h \
kgfldname.h \
kgfsort.h \
kghashavg.h \
kghashsum.h \
kginput.h \
kgjoin.h \
kgkeybreak.h \
kgmbucket.h \
kgmseldsp.h \
kgmvavg.h \
kgmvsim.h \
kgmvstats.h \
kgnewnumber.h \
kgnewrand.h \
kgnewstr.h \
kgnjoin.h \
kgnormalize.h \
kgnrcommon.h \
kgnrjoin.h \
kgnullto.h \
kgnumber.h \
kgpadding.h \
kgpaste.h \
kgproduct.h \
kgrand.h \
kgrjoin.h \
kgminput.h \
kgsed.h \
kgsel.h \
kgseldsp.h \
kgselrand.h \
kgselstr.h \
kgselnum.h \
kgsep.h \
kgsep2.h \
kgsetstr.h \
kgshare.h \
kgshuffle.h \
kgsim.h \
kgslide.h \
kgsplit.h \
kgstats.h \
kgsum.h \
kgsummary.h \
kgtab2csv.h \
kgtee.h \
kgtonull.h \
kgtra.h \
kgtrafld.h \
kgtraflg.h \
kguniq.h \
kgvcat.h \
kgvcommon.h \
kgvcount.h \
kgvdelim.h \
kgvjoin.h \
kgvnullto.h \
kgvdelnull.h \
kgvreplace.h \
kgvsort.h \
kgvuniq.h \
kgwindow.h \
kgxml2csv.h \
../help/en/kg2crossHelp.h \
../help/en/kgaccumHelp.h \
../help/en/kgarff2csvHelp.h \
../help/en/kgavgHelp.h \
../help/en/kgbestHelp.h \
../help/en/kgbucketHelp.h \
../help/en/kgcalHelp.h \
../help/en/kgcatHelp.h \
../help/en/kgchgnumHelp.h \
../help/en/kgchgstrHelp.h \
../help/en/kgchkcsvHelp.h \
../help/en/kgcombiHelp.h \
../help/en/kgcommonHelp.h \
../help/en/kgcountHelp.h \
../help/en/kgcrossHelp.h \
../help/en/kgcsv2arffHelp.h \
../help/en/kgcsv2jsonHelp.h \
../help/en/kgcsvconvHelp.h \
../help/en/kgcutHelp.h \
../help/en/kgdataHelp.h \
../help/en/kgdelnullHelp.h \
../help/en/kgdformatHelp.h \
../help/en/kgdspHelp.h \
../help/en/kgduprecHelp.h \
../help/en/kgfldnameHelp.h \
../help/en/kgfsortHelp.h \
../help/en/kghashavgHelp.h \
../help/en/kghashsumHelp.h \
../help/en/kginputHelp.h \
../help/en/kgjoinHelp.h \
../help/en/kgkeybreakHelp.h \
../help/en/kgmbucketHelp.h \
../help/en/kgmergeHelp.h \
../help/en/kgmseldspHelp.h \
../help/en/kgmvavgHelp.h \
../help/en/kgmvsimHelp.h \
../help/en/kgmvstatsHelp.h \
../help/en/kgnewnumberHelp.h \
../help/en/kgnewrandHelp.h \
../help/en/kgnewstrHelp.h \
../help/en/kgnjoinHelp.h \
../help/en/kgnormalizeHelp.h \
../help/en/kgnrcommonHelp.h \
../help/en/kgnrjoinHelp.h \
../help/en/kgnulltoHelp.h \
../help/en/kgnumberHelp.h \
../help/en/kgpaddingHelp.h \
../help/en/kgpasteHelp.h \
../help/en/kgproductHelp.h \
../help/en/kgrandHelp.h \
../help/en/kgrjoinHelp.h \
../help/en/kgminputHelp.h \
../help/en/kgsedHelp.h \
../help/en/kgselHelp.h \
../help/en/kgseldspHelp.h \
../help/en/kgselnumHelp.h \
../help/en/kgselrandHelp.h \
../help/en/kgselstrHelp.h \
../help/en/kgsep2Help.h \
../help/en/kgsepHelp.h \
../help/en/kgsetstrHelp.h \
../help/en/kgshareHelp.h \
../help/en/kgshuffleHelp.h \
../help/en/kgsimHelp.h \
../help/en/kgslideHelp.h \
../help/en/kgsplitHelp.h \
../help/en/kgstatsHelp.h \
../help/en/kgsumHelp.h \
../help/en/kgsummaryHelp.h \
../help/en/kgtab2csvHelp.h \
../help/en/kgteeHelp.h \
../help/en/kgtonullHelp.h \
../help/en/kgtraHelp.h \
../help/en/kgtrafldHelp.h \
../help/en/kgtraflgHelp.h \
../help/en/kguniqHelp.h \
../help/en/kgvcatHelp.h \
../help/en/kgvcommonHelp.h \
../help/en/kgvcountHelp.h \
../help/en/kgvdelimHelp.h \
../help/en/kgvdelnullHelp.h \
../help/en/kgvjoinHelp.h \
../help/en/kgvnulltoHelp.h \
../help/en/kgvreplaceHelp.h \
../help/en/kgvsortHelp.h \
../help/en/kgvuniqHelp.h \
../help/en/kgwindowHelp.h \
../help/en/kgxml2csvHelp.h \
../help/jp/kg2crossHelp.h \
../help/jp/kgaccumHelp.h \
../help/jp/kgarff2csvHelp.h \
../help/jp/kgavgHelp.h \
../help/jp/kgbestHelp.h \
../help/jp/kgbucketHelp.h \
../help/jp/kgcalHelp.h \
../help/jp/kgcatHelp.h \
../help/jp/kgchgnumHelp.h \
../help/jp/kgchgstrHelp.h \
../help/jp/kgchkcsvHelp.h \
../help/jp/kgcombiHelp.h \
../help/jp/kgcommonHelp.h \
../help/jp/kgcountHelp.h \
../help/jp/kgcrossHelp.h \
../help/jp/kgcsv2arffHelp.h \
../help/jp/kgcsv2jsonHelp.h \
../help/jp/kgcsvconvHelp.h \
../help/jp/kgcutHelp.h \
../help/jp/kgdataHelp.h \
../help/jp/kgdelnullHelp.h \
../help/jp/kgdformatHelp.h \
../help/jp/kgdspHelp.h \
../help/jp/kgduprecHelp.h \
../help/jp/kgfldnameHelp.h \
../help/jp/kgfsortHelp.h \
../help/jp/kghashavgHelp.h \
../help/jp/kghashsumHelp.h \
../help/jp/kginputHelp.h \
../help/jp/kgjoinHelp.h \
../help/jp/kgkeybreakHelp.h \
../help/jp/kgmbucketHelp.h \
../help/jp/kgmergeHelp.h \
../help/jp/kgmseldspHelp.h \
../help/jp/kgmvavgHelp.h \
../help/jp/kgmvsimHelp.h \
../help/jp/kgmvstatsHelp.h \
../help/jp/kgnewnumberHelp.h \
../help/jp/kgnewrandHelp.h \
../help/jp/kgnewstrHelp.h \
../help/jp/kgnjoinHelp.h \
../help/jp/kgnormalizeHelp.h \
../help/jp/kgnrcommonHelp.h \
../help/jp/kgnrjoinHelp.h \
../help/jp/kgnulltoHelp.h \
../help/jp/kgnumberHelp.h \
../help/jp/kgpaddingHelp.h \
../help/jp/kgpasteHelp.h \
../help/jp/kgproductHelp.h \
../help/jp/kgrandHelp.h \
../help/jp/kgrjoinHelp.h \
../help/jp/kgminputHelp.h \
../help/jp/kgsedHelp.h \
../help/jp/kgselHelp.h \
../help/jp/kgseldspHelp.h \
../help/jp/kgselnumHelp.h \
../help/jp/kgselrandHelp.h \
../help/jp/kgselstrHelp.h \
../help/jp/kgsep2Help.h \
../help/jp/kgsepHelp.h \
../help/jp/kgsetstrHelp.h \
../help/jp/kgshareHelp.h \
../help/jp/kgshuffleHelp.h \
../help/jp/kgsimHelp.h \
../help/jp/kgslideHelp.h \
../help/jp/kgsplitHelp.h \
../help/jp/kgstatsHelp.h \
../help/jp/kgsumHelp.h \
../help/jp/kgsummaryHelp.h \
../help/jp/kgtab2csvHelp.h \
../help/jp/kgteeHelp.h \
../help/jp/kgtonullHelp.h \
../help/jp/kgtraHelp.h \
../help/jp/kgtrafldHelp.h \
../help/jp/kgtraflgHelp.h \
../help/jp/kguniqHelp.h \
../help/jp/kgvcatHelp.h \
../help/jp/kgvcommonHelp.h \
../help/jp/kgvcountHelp.h \
../help/jp/kgvdelimHelp.h \
../help/jp/kgvdelnullHelp.h \
../help/jp/kgvjoinHelp.h \
../help/jp/kgvnulltoHelp.h \
../help/jp/kgvreplaceHelp.h \
../help/jp/kgvsortHelp.h \
../help/jp/kgvuniqHelp.h \
../help/jp/kgwindowHelp.h \
../help/jp/kgxml2csvHelp.h \
dat/iris_dat.h \
dat/abalone_dat.h \
dat/man0.h \
dat/man1.h \
dat/yakiniku_en.h \
dat/yakiniku_jp.h \
dat/tutorial_jp_dat.h \
dat/tutorial_jp_cust.h \
dat/tutorial_jp_syo.h \
dat/tutorial_jp_jicfs1.h \
dat/tutorial_jp_jicfs2.h \
dat/tutorial_jp_jicfs4.h \
dat/tutorial_jp_jicfs6.h \
dat/tutorial_en_dat.h \
dat/tutorial_en_cust.h \
dat/tutorial_en_syo.h \
dat/tutorial_en_jicfs1.h \
dat/tutorial_en_jicfs2.h \
dat/tutorial_en_jicfs4.h \
dat/tutorial_en_jicfs6.h 

pkgconfigdir = $(libdir)/pkgconfig

